Version 1.0-23 (2013-02-22)
  + Bug fix: read_exprs_matrix used "matrix" as column name in case the input file has only one column; now it is fixed
  + read_exprs_matrix reads in description of gct files

Version 1.0-22 (2013-02-21)
  + write_gct handles 0-row matrix

Version 1.0-21 (2013-02-20)
  + read_exprs_matrix can handle matrix input file in case the second column is non-numeic (e.g. descriptions)

Version 1.0-20 (2012-11-19)
  + Add new function 'read_chip' to read chip files

Version 1.0-19 (2012-11-01)
  + Add new function 'write_gmt_list' to export GMT lists

version 1.0-18 (2012-10-24)
  + read_cls has been added. The readCls function in the ribiosExpression package will be used as a synonym
  + Fix bug in read_cls: the factor order has been fixed

Version 1.0-17 (2012-10-22)
  + write_gct uses the 'desc' attribute of input matrix if available
  + Add  inst/Rscript/subsetGctByGmt.Rscript: Subset GCT file by one or more genesets defined in a GMT file

Version 1.0-16 (2012-07-12)
  + read_exprs_matrix uses a more stringent grep to detect GCT files

Version 1.0-15 (2012-07-10)
  + Add write_gct function to export Matrix in gct format
  + read_exprs_matrix does not interpret hashes ("#") as comment char any more
  + Migrate the "exprsMat2gct.Rscript" from ribiosExpression to ribiosIO

Version 1.0-14 (2012-07-04)
  + read_gct C file: the second line is less strict, allowing empty cells after the first two columns

Version 1.0-13 (2012-06-21)
  + isGctFile is less strict now regarding to spaces

Version 1.0-12 (2012-06-12)
  + Add 'isGctFile' function to determine whether an input file complies with the GCT file format.

Version 1.0-11 (2012-06-07)
  + read_gmt_list manual page puts the keyword "read_gmt_list" earlier to "read_gmt" in order to make help searching easier

Version 1.0-10 (2012-05-07)
  + src/Makevar has been cleaned up: removing hard-coded dependencies, instead using BIOS defined variables.

Version 1.0-9 (2012-04-10)