@@ -1,0 +1,5 @@
+#1.2
+2	4
+Gene	Description	S1	S1	S2	S2
+G1	Gsd	3	5	5	3
+G2	34	8	8	9	4
