@@ -1,0 +1,3 @@
+Gene	S1	S1	S2	S2
+G1	3	5	5	3
+G2	8	8	9	4
